Same classes to struct the project

--- a/Web/ForumSys.Web/appsettings.json
+++ b/Web/ForumSys.Web/appsettings.json
@@ -1,6 +1,7 @@
 ﻿{
     "ConnectionStrings": {
-        "DefaultConnection": "Server=DESKTOP-HF681D9\\SQLEXPRESS;Database=ForumSys;Trusted_Connection=True;MultipleActiveResultSets=true"
+        "DefaultConnection": "Server=.\\SQLEXPRESS;Database=ForumSys;Trusted_Connection=True;MultipleActiveResultSets=true",
+        "ProductionConnection": ""
     },
   "Logging": {
     "LogLevel": {
